javali_tests/A3/A4_keinestamSchmid/fail/IncorrectBuiltInWriteLnCall.javali
// Rule 2.3.2: Tests that an incorrect call to writeln fails.
class Main {
	void main() {
		writeln(1.2);
	}
}